[project]
name = "pubmed-paper-filterer"
version = "0.1.0"
description = "A tool to fetch and filter research papers from PubMed."
authors = [
    {name = "Damodhar Zanwar",email = "damodharzanwar5@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "biopython (>=1.84,<2.0)",
    "click (>=8.1.8,<9.0.0)"
]

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.poetry.group.dev.dependencies]
notebook = "^7.3.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
